--- a/ItunesMusicComparer/ItunesMusicComparer/ItunesMusicComparer.csproj
+++ b/ItunesMusicComparer/ItunesMusicComparer/ItunesMusicComparer.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\FileData.cs" />
+    <Compile Include="Classes\ItemDeletedEventArgs.cs" />
+    <Compile Include="Models\FolderFileHelper.cs" />
     <Compile Include="Views\FileListItem.cs">
       <SubType>UserControl</SubType>
     </Compile>
