--- a/ItunesMusicComparer/ItunesMusicComparer/ItunesMusicComparer.csproj
+++ b/ItunesMusicComparer/ItunesMusicComparer/ItunesMusicComparer.csproj
@@ -64,6 +64,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\FormShowFilesMissing.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FormShowFilesMissing.Designer.cs">
+      <DependentUpon>FormShowFilesMissing.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Views\FileListItem.resx">
       <DependentUpon>FileListItem.cs</DependentUpon>
     </EmbeddedResource>
@@ -79,6 +85,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\FormShowFilesMissing.resx">
+      <DependentUpon>FormShowFilesMissing.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
